[package]
name = "pg_base62"
version = "0.1.0"
edition = "2024"
description = "A PostgreSQL extension for encoding and decoding UUID to Base62"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bkircher/pg_base62"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_base62"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
thiserror = "2"
base62 = "2.2.3"
uuid = { version = "1.18", features = ["std", "v7"] }

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
